Fixed Warnings